RouteLogic-v4.0.0/force-app/main/default/objects/Security_Alert__e/Security_Alert__e.object-meta.xml
<CustomObject>
    <description>Real-time security alerts for critical events</description>
    <label>Security Alert</label>
    <pluralLabel>Security Alerts</pluralLabel>
</CustomObject>