RouteLogic-v4.0.0/force-app/main/default/objects/Security_Alert__e/fields/Alert_Details__c.field-meta.xml
<CustomField>
    <fullName>Alert_Details__c</fullName>
    <description>JSON details of the security alert</description>
    <label>Alert Details</label>
    <length>32768</length>
    <type>Text</type>
</CustomField>