RouteLogic-v4.0.0/force-app/main/default/objects/Security_Alert__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of security event</description>
    <label>Event Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>