RouteLogic-v4.0.0/force-app/main/default/objects/Security_Alert__e/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Severity level of the alert</description>
    <label>Severity</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>