RouteLogic-v4.0.0/force-app/main/default/objects/Security_Alert__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>When the alert was generated</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>