RouteLogic-v4.0.0/force-app/main/default/objects/Security_Alert__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>ID of the user involved in the event</description>
    <label>User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>